--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: #014e34;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%239C92AC' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+}
 
 .board {
     display: flex;
@@ -31,7 +35,7 @@
 }
 
 .actions button{
-    border: 1px solid rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
     padding: 20px;
     width: 150px;
     margin: 10px;
@@ -43,7 +47,8 @@
 }
 
 .buy{
-    background: rgb(5, 176, 5);
+    background: rgb(7,122,32);
+    background: linear-gradient(90deg, rgba(7,122,32,1) 0%, rgba(21,131,6,1) 35%, rgba(22,125,17,1) 100%);
 }
 
 .stop{
@@ -59,6 +64,10 @@
     display: flex;
     justify-content: center;
     border: 1px solid black;
+}
+
+.countCom{
+    border: 0;
 }
 
 .buttons{
